# nimi

./: .cursorignore  .cursorrules  .editorconfig  .env.example  .gitignore  .goreleaser.yml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .rgignore  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  ONBOARDING.md  README.md  RELEASE.md  SECURITY.md  TESTING.md  VISION.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/resources/: desktop-release-manifest.json
apps/desktop/src-tauri/resources/default-mods/local-chat/: mod.manifest.yaml
apps/desktop/src-tauri/resources/default-mods/test-ai/: mod.manifest.yaml
apps/desktop/src-tauri/resources/runtime/: .gitignore  manifest.json
apps/desktop/src-tauri/src/: desktop_e2e_fixture.rs  desktop_paths.rs  desktop_release.rs  desktop_updates.rs  main.rs  test_support.rs
apps/desktop/src-tauri/src/chat_agent_store/: codec.rs  commands.rs  crud.rs  db.rs  mod.rs  projection.rs  rows.rs  schema.rs  tests.rs  tests_turn_projection.rs  turns.rs  types.rs
apps/desktop/src-tauri/src/chat_ai_store/: codec.rs  commands.rs  crud.rs  db.rs  mod.rs  rows.rs  schema.rs  tests.rs  types.rs
apps/desktop/src-tauri/src/desktop_agent_avatar_store/: commands.rs  db.rs  db_assets.rs  db_import.rs  db_queries.rs  db_support.rs  mod.rs  tests.rs  types.rs
apps/desktop/src-tauri/src/desktop_agent_backdrop_store/: commands.rs  mod.rs  store.rs  types.rs
apps/desktop/src-tauri/src/desktop_agent_center_store/: mod.rs  resources.rs  resources_commands.rs  resources_manifest_validation.rs  resources_operations.rs  resources_tests.rs  resources_validation.rs  store.rs  types.rs
apps/desktop/src-tauri/src/desktop_avatar_instance_registry/: commands.rs  mod.rs  store.rs  types.rs
apps/desktop/src-tauri/src/desktop_release/: manifest.rs  runtime_paths.rs  runtime_stage.rs
apps/desktop/src-tauri/src/desktop_updates/: tests.rs
apps/desktop/src-tauri/src/external_agent_gateway/: auth.rs  mod.rs  server.rs  token_issuer.rs
apps/desktop/src-tauri/src/llm_adapter/: commands.rs  mod.rs  store.rs
apps/desktop/src-tauri/src/local_ai_runtime/: audit.rs  catalog.rs  commands.rs  device_profile.rs  engine_host.rs  hf_source.rs  import_validator.rs  mod.rs  model_registry.rs  provider_adapter.rs  reason_codes.rs  service_artifacts.rs  service_lifecycle.rs  store.rs  supervisor.rs  types.rs  verified_models.rs
apps/desktop/src-tauri/src/local_ai_runtime/commands/: commands_catalog_audit.rs  commands_catalog_dependencies.rs  commands_downloads.rs  commands_import_file.rs  commands_import_manifest.rs  commands_install_shared.rs  commands_models_audit.rs  commands_reveal_tests.rs  commands_services.rs  common_types.rs  mod.rs
apps/desktop/src-tauri/src/local_ai_runtime/hf_source/: download_transport.rs  mod.rs  repo_normalization.rs  tests.rs
apps/desktop/src-tauri/src/local_runtime/: artifact_registry.rs  audit.rs  capability_matrix.rs  catalog.rs  dependency_apply.rs  dependency_resolver.rs  device_profile.rs  download_manager.rs  engine_host.rs  engine_pack.rs  engine_pack_download.rs  import_validator.rs  mod.rs  model_index.rs  model_index_remote.rs  model_index_remote_types.rs  model_registry.rs  node_catalog.rs  provider_adapter.rs  qwen_tts_server_template.py  recommendation.rs  recommendation_llmfit.rs  recommendation_media.rs  recommendation_shared.rs  service_artifacts.rs  service_lifecycle.rs  store.rs  supervisor.rs  types.rs  verified_artifacts.rs  verified_assets.rs  verified_models.rs
apps/desktop/src-tauri/src/local_runtime/catalog/: huggingface.rs  install_plan.rs  mod.rs  shared.rs
apps/desktop/src-tauri/src/local_runtime/commands/: commands_artifact_orphans.rs  commands_artifacts.rs  commands_assets.rs  commands_assets_intake.rs  commands_catalog_audit.rs  commands_catalog_dependencies.rs  commands_downloads.rs  commands_import_bundle.rs  mod.rs  (+15 more)
apps/desktop/src-tauri/src/main_parts/: app_bootstrap.rs  defaults_and_commands.rs  env_http.rs  mod.rs  session_logging.rs  tests.rs
apps/desktop/src-tauri/src/menu_bar_shell/: actions.rs  menu.rs  mod.rs  state.rs  window.rs
apps/desktop/src-tauri/src/runtime_bridge/: channel_pool.rs  daemon_manager.rs  error_map.rs  metadata.rs  mod.rs  stream.rs  unary.rs
apps/desktop/src-tauri/src/runtime_mod/: commands.rs  store.rs
apps/forge/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/forge/src-tauri/src/: defaults.rs  main.rs  oauth_commands.rs
apps/forge/src-tauri/src/runtime_bridge/: metadata.rs
apps/nimi-avatar/src-tauri/: Cargo.toml  tauri.conf.json
apps/nimi-avatar/src-tauri/capabilities/: default.json
apps/overtone/src-tauri/: Cargo.toml  tauri.conf.json
apps/overtone/src-tauri/icons/: icon.icns
apps/overtone/src-tauri/src/: main.rs  oauth_commands.rs
apps/overtone/src-tauri/src/runtime_bridge/: metadata.rs  mod.rs
apps/realm-drift/src-tauri/: Cargo.toml  tauri.conf.json
apps/realm-drift/src-tauri/src/: defaults.rs  main.rs
apps/shiji/src-tauri/: Cargo.toml  tauri.conf.json
apps/shiji/src-tauri/src/: defaults.rs  desktop_paths.rs  main.rs  session_logging.rs
apps/shiji/src-tauri/src/sqlite/: migrations.rs  mod.rs  queries.rs
apps/video-food-map/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/video-food-map/src-tauri/src/: db.rs  db_imports.rs  db_queries.rs  db_schema.rs  db_snapshot.rs  db_tests.rs  desktop_paths.rs  main.rs  probe.rs  probe_bilibili.rs  probe_client.rs  probe_geocode.rs  probe_runner.rs  probe_tests.rs  runtime_daemon.rs  script_runner.rs  settings.rs
kit/shell/tauri/: Cargo.toml  build.rs
kit/shell/tauri/src/: auth_session_commands.rs  auth_session_commands_tests.rs  desktop_paths.rs  lib.rs  oauth_commands.rs  runtime_defaults.rs  session_logging.rs
kit/shell/tauri/src/runtime_bridge/: channel_pool.rs  daemon_manager.rs  metadata.rs  mod.rs
(+6541 files in other folders)
