[package]
name = "nimiplatform-desktop"
version = "0.1.0"
description = "Nimi Desktop Runtime Shell (Tauri)"
authors = ["Nimi Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.12"
protoc-bin-vendored = "3"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "stream"] }
dirs = "5"
rfd = "0.15"
tauri = { version = "2", features = [] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_yaml = "0.9"
webbrowser = "1"
sha2 = "0.10"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
url = "2"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "sync", "time"] }
jsonwebtoken = "9"
futures-util = "0.3"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.2"
