[package]
name = "nimiplatform-desktop"
version = "0.1.0"
description = "Nimi Desktop Runtime Shell (Tauri)"
authors = ["Nimi Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"
serde_json = "1"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "blocking", "stream", "form", "query"] }
dirs = "6"
rfd = "0.17"
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde_yaml = "0.9"
webbrowser = "1"
sha2 = "0.10"
getrandom = "0.2"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
url = "2"
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "sync", "time"] }
jsonwebtoken = "10"
futures-util = "0.3"
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
base64 = "0.22"
aes-gcm = "0.10"
zip = { version = "8.2", default-features = false, features = ["deflate"] }
tempfile = "3"
notify = "8"
ed25519-dalek = { version = "2", features = ["pem", "pkcs8"] }
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
llmfit-core = "0.7.4"
keyring = "3"
nimi-kit-shell-tauri = { path = "../../../kit/shell/tauri" }
sysinfo = "0.34.2"

[dev-dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.2"
keyring = { version = "3", features = ["apple-native"] }
