[package]
name = "nimiplatform-forge"
version = "0.1.0"
description = "Nimi Forge — Creator Studio (Tauri)"
authors = ["Nimi Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "sync", "time"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
base64 = "0.22"
futures-util = "0.3"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
webbrowser = "1"

[dev-dependencies]
