[package]
name = "nimiplatform-shiji"
version = "0.1.0"
description = "ShiJi (时迹) — Immersive History Education (Tauri)"
authors = ["Nimi Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "sync", "time"] }
base64 = "0.22"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
webbrowser = "1"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
rusqlite = { version = "0.38", features = ["bundled"] }

[dev-dependencies]
