[package]
name = "nimiplatform-video-food-map"
version = "0.1.0"
description = "Nimi Video Food Map — Local creator-video food discovery app"
authors = ["Nimi Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = true, features = ["clock"] }
dirs = "6"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
