[package]
name = "nimi-kit-shell-tauri"
version = "0.1.0"
edition = "2021"
description = "Shared Tauri host glue for Nimi apps — runtime bridge, daemon lifecycle, session logging, auth/oauth commands, runtime defaults."
publish = false

[dependencies]
tauri = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "sync", "time"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
base64 = "0.22"
url = "2"
reqwest = { version = "0.12", features = ["rustls-tls"] }
webbrowser = "1"
futures-util = "0.3"
aes-gcm = "0.10"
keyring = "3"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[features]
default = []
